<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">暖暖天气</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
     <!-- url -->

    <!-- xListView -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="today_fortune">今日运势</string>
    <string name="tomorrow_fortune">明日运势</string>
    <string name="week_fortune">本周运势</string>
    <string name="month_fortune">本月运势</string>
    <string name="year_fortune">今年运势</string>
    <string name="love_fortune">爱情运势</string>

    <!-- JazzyViewPagger -->
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>

    <!-- SettingFragment -->
    <string name="user_update_password">修改密码</string>
    <string name="user_register">注册</string>
    <string name="user_info">用户信息</string>
    <string name="user_center">用户中心</string>
    <string name="user_update_info">编辑信息</string>
    <string name="user_no">该功能正在开发中</string>
    <string name="setting_weather">天气预报</string>
    <string name="setting_update">版本更新</string>
    <string name="upgrade_tip">版本升级</string>
    <string name="upgrade_tip_no">没有检查到新版本</string>
    <string name="upgrade_sure">确定</string>

    <!-- BlowActivity -->
    <string name="weather">天气预报</string>
    <string name="action_change">切换城市</string>
    <string name="action_add">搜索全国城市</string>
    <string name="action_remove">移除城市</string>
    <string name="dlg_sure">确定</string>
    <string name="dlg_cancel">取消</string>
    <string name="dlg_msg">获取数据中……</string>
    <string name="city">城市</string>
    <string name="date">日期</string>
    <string name="tgd">体感</string>
    <string name="direction">风向</string>
    <string name="power">风力</string>
    <string name="zwx">紫外线</string>
    <string name="pollution">污染物</string>
    <string name="yd">运动指数</string>
    <string name="chy">穿衣指数</string>
    <string name="temperature">气温</string>
    <string name="status">天气</string>
    <string name="province">省份</string>
    <string name="hot_city">热门城市</string>
    <string name="manage_city">城市管理</string>
    <string name="duoyun">多云</string>

</resources>