<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg_managecity"
    android:orientation="vertical">
    
    <TextView
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="50dip"
        android:text="@string/manage_city"
        android:textColor="@color/sys_background"
        android:textSize="25sp"
        android:gravity="center"
        android:background="@drawable/title_mood_trend"
        >
    </TextView>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="10dip"
            android:layout_gravity="center_vertical"
            android:text="@string/action_add"
            android:textColor="#A9A9A9"
            android:background="@drawable/bg_search"
            android:textSize="20sp" />
    <TextView
        android:id="@+id/myTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:layout_marginLeft="30dip"
        android:textColor="@color/sys_background"
        android:textSize="15sp"
        android:text="@string/hot_city" />
    
    <include layout="@layout/public_setting_interval_line" />
    
   <GridView 
    android:id="@+id/gridview"  
    android:layout_width="fill_parent"    
    android:layout_height="fill_parent"  
    android:layout_marginLeft="30dip"
    android:layout_marginRight="30dip"
    android:numColumns="3"  
   
    />  
</LinearLayout>
