<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/layout_star_fortune_titile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RelativeLayout
                android:id="@+id/layout_star_fortune_titile1"
                android:layout_width="fill_parent"
                android:layout_height="100dip"
                android:background="@drawable/star_title_head" >

                <RelativeLayout
                    android:id="@+id/date"
                    android:layout_width="154dip"
                    android:layout_height="75dip"
                    android:layout_alignParentLeft="true"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="12dip"
                    android:layout_marginLeft="17dip"
                    android:layout_marginTop="14dip"
                    android:background="@drawable/star_title_date" >

                    <TextView
                        android:id="@+id/year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="13dip"
                        android:layout_marginTop="16dip"
                        android:textColor="@color/coolpink"
                        android:textSize="18dip" />

                    <TextView
                        android:id="@+id/month"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@id/year"
                        android:layout_toRightOf="@id/year"
                        android:textColor="@color/coolpink"
                        android:textSize="18dip" />

                    <TextView
                        android:id="@+id/day"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="11dip"
                        android:layout_toRightOf="@id/month"
                        android:textColor="@color/coolpink"
                        android:textSize="53dip" />

                    <TextView
                        android:id="@+id/week"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignStart="@id/year"
                        android:layout_below="@id/year"
                        android:layout_marginLeft="4dip"
                        android:text="星期六"
                        android:textColor="@color/coolpink"
                        android:textSize="22dip" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="107dip"
                    android:layout_height="86dip"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="5dip"
                    android:layout_marginRight="20dip"
                    android:layout_marginTop="10dip" >

                    <TextView
                        android:id="@+id/star"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent" />
                </RelativeLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/layout_star_fortune_titile2"
                android:layout_width="fill_parent"
                android:layout_height="20dip"
                android:layout_below="@id/layout_star_fortune_titile1"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="5dip"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/title_today"
                    style="@style/star_title_txt"
                    android:text="@string/today_fortune" />

                <TextView
                    android:id="@+id/title_tomorrow"
                    style="@style/star_title_txt"
                    android:text="@string/tomorrow_fortune" />

                <TextView
                    android:id="@+id/title_week"
                    style="@style/star_title_txt"
                    android:text="@string/week_fortune" />

                <TextView
                    android:id="@+id/title_month"
                    style="@style/star_title_txt"
                    android:text="@string/month_fortune" />

                <TextView
                    android:id="@+id/title_year"
                    style="@style/star_title_txt"
                    android:text="@string/year_fortune" />

                <TextView
                    android:id="@+id/title_love"
                    style="@style/star_title_txt"
                    android:text="@string/love_fortune" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/star_background"
            android:orientation="vertical" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="20dip"
                android:layout_marginBottom="5dip"
                android:background="@drawable/star_title_flower" />

            <com.nuannuan.common.custom.controls.JazzyViewPager
                android:id="@+id/jazzy_pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="40dip" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/guide_bg"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dip"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>